--- a/daemon/.example.env
+++ b/daemon/.example.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://localhost/halql
+DATABASE_URL=postgres://localhost/jacquelineql
 RCON_SOCKET=tcp://localhost:28960
 STATS_SOCKET=tcp://localhost:27960
