--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -3,19 +3,17 @@ name = "daemon"
 version = "0.1.0"
 authors = ["josh@joshuabell.io"]
 
-[profile.release]
-lto = true
-
 [dependencies]
 quickcheck = "*"
+stainless = "*"
 serde = "*"
 serde_json = "*"
 serde_macros = "*"
 rustc-serialize = "*"
-clippy = "*"
+redis = "0.5.2"
 uuid = "0.1"
-diesel = "0.5.0"
-diesel_codegen = { version = "0.5.0", default-features = false, features = ["nightly", "postgres"] }
 dotenv = "0.8.0"
 dotenv_macros = "0.8.0"
+bincode = "*"
+chrono = "*"
 zmq = { git = "https://github.com/erickt/rust-zmq.git" }
