--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -16,4 +16,5 @@ dotenv = "0.8.0"
 dotenv_macros = "0.8.0"
 bincode = "*"
 chrono = "*"
+regex = "0.1"
 zmq = { git = "https://github.com/erickt/rust-zmq.git" }
